# x402-solana

./: .gitignore  README.md  monitor-vaa.fish  test-payment-flow.fish
backend/: .env.example  check-enums.ts  drop-and-reseed.ts  package.json  relayer-keypair.json  run-migration.sh  seed-simple.ts  seed-test-content.ts  test-mcp.sh  test-ollama.ts  test-payment-flow.sh
backend/migrations/: 001_cross_chain_payments.sql
backend/src/: api.controller.ts  app.module.ts  content-management.controller.ts  content.controller.ts  main.ts  mcp-server.ts  payment-api.controller.ts  payment-api.module.ts  seed-zk-keys.ts
backend/src/admin/: admin.controller.ts  admin.module.ts
backend/src/bridge/: bridge.controller.ts  bridge.module.ts  bridge.service.ts
backend/src/contracts/: contract-integration.service.ts  contracts.module.ts
backend/src/database/: entities.ts
backend/src/database/entities/: CrossChainPayment.ts  audit-event.entity.ts  content-listing.entity.ts  credential-issuer.entity.ts  cross-chain-transaction.entity.ts  index.ts  merkle-root.entity.ts  payment-session.entity.ts  zk-key.entity.ts
backend/src/monitoring/: event-monitor.service.ts  monitoring.module.ts
backend/src/payment/: payment.module.ts  payment.service.ts  x402.middleware.ts
backend/src/proof/: proof-orchestrator.service.ts  proof.module.ts
backend/src/redis/: redis.service.ts
backend/src/relayer/: relayer.module.ts  relayer.service.ts
backend/src/solana/: listener.service.ts  solana.config.ts  solana.module.ts  solana.service.ts
backend/src/storage/: supabase.service.ts
backend/src/wormhole/: bridge.service.ts  wormhole.module.ts
contracts/: .pnp.cjs  Anchor.toml  README.md  package-lock.json  package.json
contracts/circuits/: .gitignore  README.md  credential.circom  merkletree.circom  package-lock.json  package.json  spend.circom  test_credential_proper.js  test_merkletree.circom  test_spend_proper.js
contracts/circuits/docs/: Setup_and_Usage.md
contracts/idl/: access_controller.json  shielded_pool.json  spend_verifier.json  token_hooks.json  x402_registry.json  zk_meta_registry.json
contracts/programs/access-controller/: Cargo.toml
contracts/programs/access-controller/src/: lib.rs
contracts/programs/contracts/: Cargo.toml
contracts/programs/contracts/src/: lib.rs
contracts/programs/shielded-pool/: Cargo.toml
contracts/programs/shielded-pool/src/: lib.rs
contracts/programs/spend-verifier/: Cargo.toml
contracts/programs/spend-verifier/src/: lib.rs
contracts/programs/token-hooks/: Cargo.toml
contracts/programs/token-hooks/src/: lib.rs
contracts/programs/x402-registry/: Cargo.toml
contracts/programs/x402-registry/src/: lib.rs
contracts/programs/zk-meta-registry/: Cargo.toml
contracts/programs/zk-meta-registry/src/: lib.rs
contracts/tests/: contracts.ts
demo-ui/: BUILD_STATUS.md  package.json
demo-ui/app/: globals.css  layout.tsx  page.tsx
demo-ui/app/content/[id]/: page.tsx
demo-ui/app/dashboard/: page.tsx
demo-ui/app/marketplace/: page.tsx
demo-ui/app/upload/: page.tsx
demo-ui/components/: Navbar.tsx
demo-ui/components/payment/: PaymentModal.tsx
demo-ui/components/providers/: WalletProvider.tsx
demo-ui/lib/: api.ts  crypto.ts  zkproof.ts
demo-ui/public/circuits/: spend.wasm
project_ref/: BRIDGE_STATUS.md  CURRENT_STATUS.md  MCP_README.md  WORMHOLE_QUICKSTART.md  cross-chain-implementation-plan.md  project.md
wormhole-bridge-contracts/: .env.example  .gitignore  README.md  foundry.toml
wormhole-bridge-contracts/broadcast/Deploy.s.sol/84532/: run-1765699602606.json
wormhole-bridge-contracts/script/: Deploy.s.sol
wormhole-bridge-contracts/src/: X402PaymentEmitter.sol
wormhole-bridge-contracts/test/: X402PaymentEmitter.t.sol
