[package]
name = "access-controller"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "access_controller"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"

sha2 = { version = "0.10.0", default-features = false }
hex = { version = "0.4.0", default-features = false, features = ["alloc"] }

anchor-spl = "0.32.1"
x402-registry = { path = "../x402-registry", features = ["cpi"] }



[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
